# AgenticAI

AutomatedScreeningApp/: 3030_Module03_Demonstration01_v1.0.docx  resume.py
RAG_KnowledgeAssistant/: README.md.txt  healthcareapp.py
RAG_KnowledgeAssistant/sampledocs/: Text2.txt
focusboard_extension/: .gitignore  PRD.md  dashboard.html  focus.html  manifest.json  summary.html  tasks.md
focusboard_extension/scripts/: aiBypass.js  background.js  clock.js  focusInput.js  focusMode.js  focus_screen.js  history.js  main.js  manifestations.js  notes.js  onboarding.js  progress.js  readingList.js  reflectQuiz.js  settings.js  storage.js  summary.js  tasks.js  weather.js
focusboard_extension/styles/: focus_screen.css  style.css
multimodal-ai/: .dockerignore  .env.example  .gitignore  .samignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
multimodal-ai/src/: app.py  evaluate.py  main.py
multimodal-ai/src/static/: index.html
multimodal-ai/src/utils/: __init__.py  image_utils.py
