[project]
name = "multimodal-ai"
version = "0.1.0"
description = "AI-powered document classification system for insurance claims using Google Gemini's multimodal capabilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easyocr>=1.7.2",
    "fastapi>=0.136.1",
    "fpdf2>=2.8.7",
    "google-genai>=1.73.1",
    "langfuse>=4.5.1",
    "mangum>=0.21.0",
    "markdown>=3.10.2",
    "opentelemetry-api>=1.41.1",
    "opentelemetry-exporter-otlp-proto-http>=1.41.1",
    "opentelemetry-instrumentation-fastapi>=0.62b1",
    "opentelemetry-sdk>=1.41.1",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "reportlab>=4.4.10",
    "uvicorn>=0.46.0",
    "weasyprint>=68.1",
]
